--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "@solid/react": "1.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "solid-auth-client": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
